--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.10.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.1
   reorderables: ^0.3.2
   draggable_widget: ^1.0.1
+  fluttertoast: ^3.1.0
+  
+  
 
 
 dev_dependencies:
